--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,7 +30,7 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  S3_ACCESS_KEY: KIAIPAXMEWQZVU34XNA
-  S3_SECRET_KEY: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-  S3_REGION: ap-northeast-1
-  S3_BUCKET: hairiah
+  S3_ACCESS_KEY: 'KIAIPAXMEWQZVU34XNA'
+  S3_SECRET_KEY: 'bGsOXJ6ByWvmsDyz3fk6PkgTEQwO0a2b7AcHRAEh'
+  S3_REGION: 'ap-northeast-1'
+  S3_BUCKET: 'hairiah'
