--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,6 @@
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: ENV['REDISCLOUD_URL']
   channel_prefix: sample_app_production
 
 development:
