--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,7 +1,7 @@
 production:
   adapter: redis
   url: ENV['REDISCLOUD_URL']
-  channel_prefix: sample_app_production
+  # channel_prefix: sample_app_production
 
 development:
   adapter: async
